chip/stm32/clock-f.c
@@ -172,8 +172,7 @@ void set_rtc_alarm(uint32_t delay_s, uint32_t delay_us,
 		return;
 	}
 
-	/* Alarm must be within 1 day (86400 seconds) */
-
+	/* Alarm timeout must be within 1 day (86400 seconds) */
 	ASSERT((delay_s + delay_us / SECOND) < SECS_PER_DAY);
 
 	rtc_unlock_regs();
@@ -406,8 +405,13 @@ static int system_rtc_set_alarm(struct host_cmd_handler_args *args)
 	struct rtc_time_reg rtc;
 	const struct ec_params_rtc *p = args->params;
 
+	/* Alarm timeout must be within 1 day (86400 seconds) */
+	if (p->time >= SECS_PER_DAY)
+		return EC_RES_INVALID_PARAM;
+
 	if (p->time != EC_RTC_ALARM_CLEAR)
 		host_rtc_alarm_set = 1;
+
 	set_rtc_alarm(p->time, 0, &rtc);
 	return EC_RES_SUCCESS;
 }
